--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,12 +1,25 @@
 footer{
     text-align: center;
     height: 4rem;
-    background: #f3f5fc;
+}
+footer p{
+    font-weight: bold;
+
 }
 @media screen and (max-width: 768px) {
-    .footer{
+    footer{
+        background: white;
+        padding: 1rem;
         width: 100%;
-        bottom: 0;
+        margin: auto;
+        height: 5rem;
     }
+    footer p{
+        font-size: 12px;
+        word-wrap: break-word;
+        word-break: break-all;
+    }
+
+    
 
 }
